# kcmhowdy

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  Makefile  README  README.md  cmake_install.cmake  config.cpp  config.h  config.ini  config.ui  ecm_uninstall.cmake  howdy-2.5.1-0.x86_64.rpm  howdy.actions  howdy.cpp  howdy.desktop  howdy.h  howdy_authhelper  howdyauthhelper.cpp  howdyauthhelper.h  install_manifest.txt  kcm_howdy-0.1.1-generic.deb  kcm_howdy.actions  kcm_howdy.desktop  kcmhowdy_1.0.0_amd64.deb  main.cpp  model.h  module.ui  org.kde.kcontrol.howdy.conf  org.kde.kcontrol.howdy.policy  org.kde.kcontrol.howdy.service  parser.cpp  parser.h  untitled1.pro  widget  widget.cpp  widget.h  widget.ui
Howdy_autogen/: moc_predefs.h  mocs_compilation.cpp
Howdy_autogen/EWIEGA46WW/: moc_howdy.cpp
Howdy_autogen/include/: ui_module.h
build-untitled1-Desktop-Debug/: Makefile  moc_config.cpp  moc_facemodelslist.cpp  moc_model.cpp  moc_modelwidget.cpp  moc_widget.cpp  ui_config.h  ui_configwidget.h  ui_model.h  ui_modelwidget.h  ui_widget.h  untitled1
debian/: changelog  control  copyright  rules
gentoo/dev-cpp/dlib-models/: Manifest  dlib-models-2018.12.28.ebuild
gentoo/kde-plasma/kcmhowdy/: Manifest  kcmhowdy-1.0.0.ebuild
gentoo/sci-libs/dlib/: Manifest  dlib-19.16.ebuild
gentoo/sys-auth/howdy/: Manifest  howdy-2.5.1.ebuild
howdy_authhelper_autogen/: moc_predefs.h
howdy_authhelper_autogen/EWIEGA46WW/: moc_howdyauthhelper.cpp
howdy_autogen/: mocs_compilation.cpp
howdy_autogen/EWIEGA46WW/: moc_config.cpp  moc_howdy.cpp  moc_model.cpp  moc_widget.cpp
howdy_autogen/include/: ui_model.h  ui_module.h  ui_widget.h
module_autogen/EWIEGA46WW/: moc_module.cpp
module_autogen/include/: module.moc
opensuse/: kcmhowdy.spec
opensuse/howdy/: howdy.spec
opensuse/kcmhowdy/: kcmhowdy.spec
opensuse/python-dlib/: python-dlib.spec
src/: CMakeLists.txt  addwidget.cpp  addwidget.cpp.autosave  addwidget.h  addwidget.ui  config.cpp  config.h.in  configwidget.cpp  configwidget.h  facemodel.cpp  facemodel.h  facemodelslist.cpp  facemodelslist.h  kcmhowdy.cpp  kcmhowdy.h  main.cpp  model.cpp  model.h  modelwidget.cpp  modelwidget.h  parser.h  untitled1.pro  widget.cpp
src/ui/: addwidget.ui  configwidget.ui  model.ui  modelwidget.ui  widget.ui
